kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-service
  namespace: default
  labels:
    app: go-service
spec:
  selector:
    app: go-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  namespace: default
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  selector:
    app: redis
    role: master
  type: ClusterIP
